--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "jsqr": "^1.2.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "eslint-plugin-vue": "^6.1.2",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
+    "surge": "^0.21.3",
     "typescript": "~3.7.5",
     "vue-template-compiler": "^2.6.11"
   }
