--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "jsqr": "^1.2.0",
+    "register-service-worker": "^1.7.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -17,6 +18,7 @@
     "@typescript-eslint/parser": "^2.18.0",
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
+    "@vue/cli-plugin-pwa": "^4.5.2",
     "@vue/cli-plugin-typescript": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
     "@vue/eslint-config-typescript": "^5.0.1",
