chore: Configure build path to for ghpages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,8 @@ jobs:
 
     - run: yarn install --frozen-lockfile
     - run: yarn build
+      env:
+        BUILD_PUBLIC_PATH: /js-camera/
 
     - name: deploy
       uses: peaceiris/actions-gh-pages@v3
