--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "deploy": "surge dist https://js-camera-amoshydra.surge.sh"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
-    "jsqr": "^1.2.0",
-    "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11"
+    "core-js": "^3.19.1",
+    "jsqr": "^1.4.0",
+    "register-service-worker": "^1.7.2",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
-    "@vue/cli-plugin-babel": "^4.2.0",
-    "@vue/cli-plugin-eslint": "^4.2.0",
-    "@vue/cli-plugin-pwa": "^4.5.2",
-    "@vue/cli-plugin-typescript": "^4.2.0",
-    "@vue/cli-service": "^4.2.0",
-    "@vue/eslint-config-typescript": "^5.0.1",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
-    "sass": "^1.25.0",
-    "sass-loader": "^8.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-plugin-eslint": "^4.5.15",
+    "@vue/cli-plugin-pwa": "^4.5.15",
+    "@vue/cli-plugin-typescript": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
+    "@vue/eslint-config-typescript": "^9.0.1",
+    "eslint": "~7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.43.4",
+    "sass-loader": "^10.2.0",
     "surge": "^0.21.3",
-    "typescript": "~3.7.5",
-    "vue-template-compiler": "^2.6.11"
+    "typescript": "~4.4.4",
+    "vue-template-compiler": "^2.6.14"
   }
 }
