--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "deploy": "surge dist https://js-camera-amoshydra.surge.sh"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.19.1",
@@ -27,7 +26,6 @@
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
-    "surge": "^0.21.3",
     "typescript": "~4.4.4",
     "vue-template-compiler": "^2.6.14"
   }
