--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/setimmediate": "^1.0.2",
     "core-js": "^3.19.1",
     "jsqr": "^1.4.0",
     "register-service-worker": "^1.7.2",
+    "setimmediate": "^1.0.5",
     "vue": "^2.6.14"
   },
   "devDependencies": {
